jACBrFramework/ACBrFramework_JNI/include/ACBrECF.h


typedef void* INTPTR;

typedef char* PCHAR;

typedef char BOOL;

DllImport int ECF_GetArqLOG(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_GetArredondaItemMFD(const INTPTR ecfHandle);

DllImport int ECF_GetArredondaPorQtd(const INTPTR ecfHandle);

DllImport int ECF_GetDecimaisPreco(const INTPTR ecfHandle);

DllImport int ECF_GetDecimaisQtd(const INTPTR ecfHandle);

DllImport int ECF_GetGavetaSinalInvertido(const INTPTR ecfHandle);

DllImport int ECF_GetIgnorarTagsFormatacao(const INTPTR ecfHandle);

DllImport int ECF_GetLinhasEntreCupons(const INTPTR ecfHandle);

DllImport int ECF_GetMaxLinhasBuffer(const INTPTR ecfHandle);

DllImport int ECF_GetOperador(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_InfoRodapeCupom_GetMD5(const INTPTR ecfHandle, PCHAR buffer, const int bufferLen);

DllImport int ECF_InfoRodapeCupom_SetMD5(const INTPTR ecfHandle, const PCHAR value);

DllImport int ECF_SetArqLOG(const INTPTR ecfHandle, const PCHAR arqLog);

DllImport int ECF_SetArredondaItemMFD(const INTPTR ecfHandle, const BOOL arredonda);

DllImport int ECF_SetArredondaPorQtd(const INTPTR ecfHandle, const BOOL arredonda);

DllImport int ECF_SetDecimaisPreco(const INTPTR ecfHandle, const int decimaisPreco);

DllImport int ECF_SetDecimaisQtd(const INTPTR ecfHandle, const int decimaisQtd);

DllImport int ECF_SetDescricaoGrande(const INTPTR ecfHandle, const BOOL descricaoGrande);

DllImport int ECF_SetGavetaSinalInvertido(const INTPTR ecfHandle, const BOOL gavetaSinalInvertido);

DllImport int ECF_SetIgnorarTagsFormatacao(const INTPTR ecfHandle, const BOOL ignorar);

DllImport int ECF_SetLinhasEntreCupons(const INTPTR ecfHandle, const int linhasEntreCupons);

DllImport int ECF_SetMaxLinhasBuffer(const INTPTR ecfHandle, const int maxLinhas);

DllImport int ECF_SetOperador(const INTPTR ecfHandle, const PCHAR operador);